--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 </strong> <br></p></td>
         </tr>
     </table>
-    <a href="./contact.html" target="_blank" >Contact Me</a>
+    <a href="contact.html" target="_blank" >Contact Me</a>
     <hr size="3" noshade>
     <h3>Education And Certification</h3>
     <ul>
