--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <p> My Email email2gajanan@gmail.com</p>
     <p> My Add 123 Aati kya Khandala </p>
 
-    <form action="mailto:email2gajanan@gmail.com" method="post">
+    <form action="index.html" method="post">
         <table>
             <tr>
                 <td><label for="Name">Your Name: </label></td>
